[package]
name = "pallet-evm-accounts"
version = "1.1.1"
authors = ["TraceLabs", "Acala Developers"]
edition = "2021"

[dependencies]
codec = { workspace = true }
libsecp256k1 = { workspace = true, optional = true }
scale-info = { workspace = true }
sha3 = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-evm = { workspace = true }
impl-trait-for-tuples = { workspace = true }
pallet-evm-utility-macro = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "libsecp256k1",
    "libsecp256k1/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-evm/std",
]
runtime-benchmarks = [
    "libsecp256k1/hmac",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
