[package]
name = "pallet-evm-utility"
version = "1.1.1"
authors = ["TraceLabs", "Acala Developers"]
edition = "2021"

[dependencies]
sha3 = { workspace = true }

sp-std = { workspace = true }

evm = { workspace = true, features = [ "with-codec" ] }
evm-gasometer = { workspace = true }
evm-runtime = { workspace = true }
ethereum = { workspace = true }

[features]
default = ["std"]
std = [
    "sha3/std",
    "sp-std/std",
    "evm/std",
    "evm/with-serde",
    "evm-runtime/std",
    "evm-gasometer/std",
    "ethereum/with-serde",
]
tracing = ["evm/tracing", "evm-gasometer/tracing", "evm-runtime/tracing"]
