[package]
name = "pallet-xc-asset-config"
authors = ["TraceLabs", "Stake Technologies"]
edition = "2021"
version = "1.1.1"

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
codec = {  workspace = true, features = [ "derive" ] }
scale-info = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Polkadot
xcm = { workspace = true }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
    "serde",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm/std",
    "pallet-balances/std",
    "frame-benchmarking?/std",
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
